<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bkrn1">

    <ImageView
        android:layout_width="155dp"
        android:layout_height="140dp"
        android:src="@drawable/globe" />

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/q3_1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ture_buttoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_text"
            android:backgroundTint="@color/purple_200">
        </Button>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/false_button"
            android:text="@string/false_text"
            android:backgroundTint="@color/red_maybe">

        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous_text"
            android:src="@android:drawable/ic_media_rew"></ImageButton>

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_text"
            android:src="@android:drawable/ic_media_ff">

        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnbalik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kembali"
            android:backgroundTint="@color/cyan_i_guess">

        </Button>

    </LinearLayout>
</LinearLayout>